force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <description>stores the details of employee</description>
    <label>Employee</label>
    <nameField>
        <displayFormat>E{00000}</displayFormat>
        <label>Employee No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>