force-app/main/default/objects/Employee__c/fields/Exit__c.field-meta.xml
<CustomField>
    <fullName>Exit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exit</label>
    <type>Checkbox</type>
</CustomField>