force-app/main/default/objects/Employee__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <inlineHelpText>Enter name of the employee</inlineHelpText>
    <label>First Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>