force-app/main/default/objects/Employee__c/fields/Salary_after_Tax__c.field-meta.xml
<CustomField>
    <fullName>Salary_after_Tax__c</fullName>
    <label>Salary after Tax</label>
    <length>18</length>
    <type>Text</type>
</CustomField>