force-app/main/default/objects/Employee__c/recordTypes/Associate.recordType-meta.xml
<RecordType>
    <fullName>Associate</fullName>
    <active>true</active>
    <label>Associate</label>
</RecordType>