force-app/main/default/objects/Employee__c/validationRules/Check_exit.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_exit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   Exit__c, 
   NOT(
      ISBLANK(  Salary__c )
   )
)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Exited employee should not have salary</errorMessage>
</ValidationRule>